examen_practico/src/main/java/com/example/examenpractico/errors/RegistroNoEncontradoException.java
package com.example.examenpractico.errors;




public class RegistroNoEncontradoException extends RuntimeException {
	public RegistroNoEncontradoException() {
		super();
	}

	public RegistroNoEncontradoException(String mensaje) {
		super(mensaje);
	}
}
